# ome-auth-server

./: .env  Cargo.toml  README.md
res/: available-stream.html  connected.html  dashboard.html  login-redirect.html  login.html  player.html  queue.html  queued_connection.html  statistics.html
res/admin/: create_stream_menu.html  dashboard.html  stream.html
res/dashboard/: dashboard.html  index.html  login-redirect.html  login.html  login_redirect.html  queue.html  queued_connection.html
res/player/: available-stream.html  available_stream.html  denied.html  enqueue.html  index.html  player.html  rejected.html  selector.html
sql/: schema.sql
src/: admin.rs  dashboard.rs  main.rs  manager.rs  player.rs  queue.rs  static_files.rs
static/style/: admin.css  common.css  dashboard.css  player.css
templates/admin/: create_stream_menu.html  dashboard.html  index.html
templates/dashboard/: dashboard.html  index.html  queue.html  statistics.html
templates/player/: enqueue.html  index.html  player.html
