[package]
name = "ome-auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
poem = "1.3.57"
poem-openapi = { version = "3.0.0", features = ["swagger-ui"] }
reqwest = { version = "0.11.18", default-features = false, features = ["json"] }
ron = "0.8.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
