[package]
name = "ome-auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
futures = "0.3.28"
ron = "0.8.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.104"
serde_urlencoded = "0.7.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
ureq = { version = "2.7.1", default-features = false, features = ["json"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
